SLCORE-2226 Fix QG issues consecutive to Java 21 migration